--- a/Web Pages/CommunityLibrary.html
+++ b/Web Pages/CommunityLibrary.html
@@ -36,8 +36,8 @@
             </a>
             <div class="modal-info">
                 <div id="modal-profile-info" class="profile-info">
-                    <span id="modal-member" class="member-name"></span>
-                    <span id="modal-member-type" class="member-type"></span>
+                    <span id="modal-username" class="username"></span>
+                    <span id="modal-role" class="role"></span>
                 </div>
                 <div id="modal-timestamp" class="timestamp">
                     <span id="modal-date" class="date"></span>
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="modal-content">
-            <img id="modal-image" src="" alt="Community Image">
+            <img id="modal-image" src="" alt="Animal Image">
             <h3 id="modal-title"></h3>
             <p id="modal-content"></p>
         </div>
