--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -24,7 +24,7 @@
 
             <div class="dropdown">
                 <select id="dropdown" name="user_type" required>
-                    <option value="" disabled selected hidden>Login as :</option>
+                    <option value="" disabled selected hidden>Login as </option>
                     <option value="student">Student</option>
                     <option value="teacher">Teacher</option>
                     <option value="member">Member</option>
