Updated Profile pubic and private
private and public profile icons update to match in all OS and on the public page it says profile/login according to the user being logged in or not

--- a/Web Pages/ProfilePrivateView.html
+++ b/Web Pages/ProfilePrivateView.html
@@ -17,7 +17,7 @@
  
         <a href="HomePage.html">
            <!-- Logout Button -->
-           <button class="logout-button" onclick="logout(event)">Logout</button>
+           <button class="login" onclick="logout(event)">Logout</button>
         </a>
     </div>
 
@@ -107,7 +107,7 @@
                 <strong>
                   <img src="Images/icons/rank.png" alt="Rank Icon" class="emoji-icon" style="width:20px; height:20px; vertical-align:middle;"> Rank:
                 </strong>
-                <span id="rank">Beginner</span>
+                <span id="rank">Loading...</span>
             </p>
               
             <!-- Progress Bar -->
@@ -119,7 +119,7 @@
                 <strong>
                   <img src="Images/icons/rank.png" alt="Next Rank Icon" class="emoji-icon" style="width:20px; height:20px; vertical-align:middle;"> Next Rank:
                 </strong>
-                <span class="next-rank" id="next-rank">Advanced</span>
+                <span class="next-rank" id="next-rank">Loading...</span>
             </p>
               
             <div id="access-code-section" class="access-code-section">
