--- a/Web Pages/SchoolPrivatePage.html
+++ b/Web Pages/SchoolPrivatePage.html
@@ -24,7 +24,7 @@
     
         <a href="HomePage.html">
            <!-- Logout Button -->
-           <button class="logout-button" onclick="logout(event)">Logout</button>
+           <button class="login" onclick="logout(event)">Logout</button>
         </a>
     </div>
 
@@ -114,7 +114,7 @@
                     <strong>
                         <img src="Images/icons/rank.png" alt="Rank Icon" class="emoji-icon" style="width:20px; height:20px; vertical-align:middle;"> Rank:
                     </strong>
-                    <span id="rank">Beginner</span>
+                    <span id="rank">Loading...</span>
                 </p>
 
                 <!-- Progress Bar -->
@@ -126,7 +126,7 @@
                     <strong>
                         <img src="Images/icons/rank.png" alt="Next Rank Icon" class="emoji-icon" style="width:20px; height:20px; vertical-align:middle;"> Next Rank:
                     </strong>
-                    <span class="next-rank" id="next-rank">Advanced</span>
+                    <span class="next-rank" id="next-rank">Loading...</span>
                 </p>
                 <button onclick="deleteAccount()" class="delete-button">
                     <img src="Images/icons/delete.png" alt="Delete Icon" class="emoji-icon" style="width:20px; height:20px; vertical-align:middle;"> Delete Account
