--- a/Web Pages/WordScapes.html
+++ b/Web Pages/WordScapes.html
@@ -6,6 +6,7 @@
     <title>Word Puzzle Game</title>
     <link rel="stylesheet" href="WordScapes.css">
     <script defer src="WordScapes.js"></script>
+    <script defer src="Protect.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
