--- a/Web Pages/Games.html
+++ b/Web Pages/Games.html
@@ -6,6 +6,7 @@
     <title>Games</title>
     <link rel="stylesheet" href="Games.css">
     <script defer src="Games.js"></script>
+    <script src="Main.js"></script>
 </head>
 <body>
     <div class="navbar">
@@ -18,7 +19,7 @@
             <a href="Post.html"><button>Post</button></a>
             <a href="Games.html"><button>Games</button></a>
         </div>
-        <a href="ProfilePrivateView.html"><button class="login">Profile</button></a>
+        <button class="login">Profile</button>
     </div>
     
     <div class="games-container">
