School Public Profile Contact Us
the "contact us" on school public profile is now functional and the form sends to email of school (khairunnisaujungrayaprimary@gmail.com)

--- a/Web Pages/SchoolPage.html
+++ b/Web Pages/SchoolPage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="SchoolPage.css">
     <script defer src="SchoolPublicView.js"></script>
     <script src="Main.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </head>
 <body>
     <div class="navbar">
