--- a/Web Pages/WordScapes.html
+++ b/Web Pages/WordScapes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="WordScapes.css">
     <script defer src="WordScapes.js"></script>
     <script defer src="Protect.js"></script>
+    <script defer src="main.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
