--- a/Web Pages/SchoolLibrary.html
+++ b/Web Pages/SchoolLibrary.html
@@ -83,7 +83,7 @@
 
 
     <script src="SchoolLibrary.js"></script>
-    <script src="Protect.js"></script>
+    <script src="Main.js"></script>
 
 </body>
 </html>
