--- a/Web Pages/CommunityLibrary.html
+++ b/Web Pages/CommunityLibrary.html
@@ -1,59 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Komodo Hub</title>
-    <link rel="stylesheet" href="SchoolLibrary.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Komodo Hub - Community Library</title>
+  <link rel="stylesheet" href="SchoolLibrary.css">
 </head>
 <body>
-    <div class="navbar">
-        <a href="HomePage.html">
-            <img src="images/komodoLogo.png" alt="Logo" class="logo">
-        </a>
-        
-        <div class="nav-center">
-            <a href="CommunityLibrary.html"><button class="community-btn">Community Library</button></a>
-            <a href="SchoolLibrary.html"><button>School Library</button></a>
-            <a href="Post.html"><button>Post</button></a>
-            <a href="Games.html"><button>Games</button></a>
+  <div class="navbar">
+    <a href="HomePage.html">
+      <img src="images/komodoLogo.png" alt="Komodo Hub Logo" class="logo">
+    </a>
+    <div class="nav-center">
+      <a href="CommunityLibrary.html"><button class="community-btn">Community Library</button></a>
+      <a href="SchoolLibrary.html"><button>School Library</button></a>
+      <a href="Post.html"><button>Post</button></a>
+      <a href="Games.html"><button>Games</button></a>
+    </div>
+    <button class="login">Login</button>
+</div>
+
+  <div class="content-wrapper">
+    <div class="container" id="container">
+      <!-- Cards will be dynamically inserted here -->
+    </div>
+  </div>
+
+  <!-- MODAL (POST DETAILS) -->
+  <div class="overlay" id="overlay" onclick="closeModal()"></div>
+  <div class="modal" id="modal">
+    <!-- Modal Header (User Profile & Timestamp) -->
+    <div class="modal-header">
+      <!-- Profile Link -->
+      <a id="modal-profile-link" href="ProfilePublicView.html" class="profile-link">
+        <img id="modal-profile" src="images/default.png" alt="Profile" class="profile-img">
+      </a>
+      <!-- Profile & Timestamp Info -->
+      <div class="modal-info">
+        <div id="modal-profile-info" class="profile-info">
+          <span id="modal-username" class="username"></span>
+          <span id="modal-role" class="role"></span>
         </div>
-    
-        <a href="LoginPage.html"><button class="login">Login</button></a>
+        <div id="modal-timestamp-container">
+          <button id="delete-post-btn" class="delete-post-btn" style="display: none;">Delete</button>
+          <div id="modal-timestamp" class="timestamp">
+            <span id="modal-date" class="date"></span>
+            <span id="modal-time" class="time"></span>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="content-wrapper">
-        <div class="container" id="container">
-            <!-- Cards will be dynamically inserted here -->
-        </div>
+    <!-- Delete Confirmation Modal -->
+    <div class="delete-modal-overlay" id="delete-modal-overlay"></div>
+    <div class="delete-modal" id="delete-modal">
+      <h3>Confirm Delete</h3>
+      <p>Are you sure you want to delete this post?</p>
+      <button id="confirm-delete-btn">Yes, Delete</button>
+      <button id="cancel-delete-btn">Cancel</button>
     </div>
 
-    <div class="overlay" id="overlay" onclick="closeModal()"></div>
-    <div class="modal" id="modal">
-        <div class="modal-header">
-            <a id="modal-profile-link" href="" class="profile-link">
-                <img id="modal-profile" src="" alt="Profile" class="profile-img">
-            </a>
-            <div class="modal-info">
-                <div id="modal-profile-info" class="profile-info">
-                    <span id="modal-username" class="username"></span>
-                    <span id="modal-role" class="role"></span>
-                </div>
-                <div id="modal-timestamp" class="timestamp">
-                    <span id="modal-date" class="date"></span>
-                    <span id="modal-time" class="time"></span>
-                </div>
-            </div>
-        </div>
-        <div class="modal-content">
-            <img id="modal-image" src="" alt="Animal Image">
-            <h3 id="modal-title"></h3>
-            <p id="modal-content"></p>
-        </div>
-
-        <button onclick="closeModal()">Close</button>
+    <!-- Modal Content (Post Details) -->
+    <div class="modal-content">
+      <img id="modal-image" src="images/default.png" alt="Post Image">
+      <h3 id="modal-title"></h3>
+      <p id="modal-content"></p>
     </div>
 
-    <script src="CommunityLibrary.js"></script>
+    <button onclick="closeModal()">Close</button>
+  </div>
+  <script src="CommunityLibrary.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
