updated protect.js also added the script in the homepage

--- a/Web Pages/HomePage.html
+++ b/Web Pages/HomePage.html
@@ -6,6 +6,7 @@
   <title>Komodo Hub</title>
   <link rel="stylesheet" href="/Web Pages/HomePage.css" />
   <script src="/Web Pages/Main.js"></script>
+  <script src="protect.js"></script>
 </head>
 <body>
 
