--- a/Web Pages/Games.html
+++ b/Web Pages/Games.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Games.css">
     <script defer src="Games.js"></script>
     <script src="Main.js"></script>
+    <script src="Protect.js"></script>
 </head>
 <body>
     <div class="navbar">
