--- a/Web Pages/LoginPage.html
+++ b/Web Pages/LoginPage.html
@@ -137,8 +137,23 @@
 
         // login success popup
         function showLoginSuccessPopup(username) {
-            let registeredName = localStorage.getItem("registeredName") || username;
+            // Retrieve the username from local storage or use the passed parameter
+            let storedUsername = localStorage.getItem("username") || username;
             
+            // Fetch user details from the backend to get the full name
+            fetch('/get_user_details', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                body: new URLSearchParams({ username: storedUsername })
+            })
+            .then(response => response.json())
+            .then(data => {
+                // Check if full name is returned; if not, display an error popup
+                if (!data.name) {
+                    showPopup("Error fetching user full name", "error", 3000);
+                    return;
+                }
+            let registeredName = data.name;
             let successPopup = document.createElement("div");
             successPopup.className = "login success-popup"; 
             successPopup.innerHTML = `
@@ -160,6 +175,11 @@
                 successPopup.style.opacity = "0";
                 setTimeout(() => successPopup.remove(), 300);
             }, 290000);
+            })
+            .catch(error => {
+                console.error("Error fetching user details:", error);
+                showPopup("Error fetching user details", "error", 3000);
+            });
         }
 
         // Function to toggle password visibility
